Fix non-burger menu item spacing

--- a/styles/main-default.css
+++ b/styles/main-default.css
@@ -35,6 +35,7 @@ header {
 #header-top-inner {
     display: flex;
     height: 100%;
+    justify-content: space-between;
 }
 
 #msg-logo {
@@ -49,7 +50,7 @@ header {
 
 #header-menu {
     flex: 1;
-    padding-left: 10%;
+    max-width: 30em;
 }
 
 #header-menu-inner {
